group velocity dispersion etc

--- a/defs.tex
+++ b/defs.tex
@@ -21,6 +21,7 @@
 \newcommand{\kk}{{\mathbf{k}}}
 \newcommand{\KK}{{\mathbf{K}}}
 \newcommand{\epsr}{{\varepsilon_r}}
+\newcommand{\vg}{{\mathbf{v_g}}}
 
 \newcommand{\add}[1]{\color{blue}#1\color{black}{}}
 \newcommand{\rmv}[1]{\color{grey}\ensuremath{\vdash}#1\ensuremath{\dashv}\color{black}{}}
