--- a/fdphd.bib
+++ b/fdphd.bib
@@ -378,6 +378,12 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2009},
   publisher={CRC Press}
 }
+@book{shalaev2010book,
+  title={Optical metamaterials: fundamentals and applications},
+  author={Shalaev, V and Cai, W},
+  year={2010},
+  publisher={Springer}
+}
 
 /*}}}*/
 %  -- generic theory --/*{{{*/
