--- a/fdphd.bib
+++ b/fdphd.bib
@@ -427,6 +427,23 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2003},
   publisher={APS}
 }
+
+@article{mcdonald2000negative,
+  title={Negative group velocity},
+  author={McDonald, Kirk T},
+  journal={arXiv preprint physics/0008013},
+  year={2000}
+}
+@article{dolling2006simultaneous,
+  title={Simultaneous negative phase and group velocity of light in a metamaterial},
+  author={Dolling, Gunnar and Enkrich, Christian and Wegener, Martin and Soukoulis, Costas M and Linden, Stefan},
+  journal={Science},
+  volume={312},
+  number={5775},
+  pages={892--894},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
+}
 /*}}}*/
 %  -- homogenisation -- /*{{{*/
 @article{nicolson1970measurement,
@@ -1228,8 +1245,10 @@ lts.fzu.cz/pdf/d-js.pdf
 
 @misc{dominec2014_meep_metamaterials,
 	author = {Dominec, Filip},
-	title = {MEEP metamaterial simulation scripts, \textit{https://github.com/FilipDominec/meep\_metamaterials}, last visited {M}ay 2014},
-	howpublished ={Online},
+	title = {MEEP metamaterial simulation scripts},
+	howpublished={Online},
+	url={https://github.com/FilipDominec/meep\_metamaterials},
+	note={last visited {M}ay 2014},}
 }
 @misc{dominec2015_triostepper,
 	author = {Dominec, Filip},
