--- a/theory.tex
+++ b/theory.tex
@@ -441,18 +441,20 @@ In Fig. \ref{fg_ifc2}d, an extreme case of spatial walk-off is shown on the exam
 %Assuming a short pulse for simplicity
 
 \mdf{
-TODO move later: show that nonlocal/photonic media can lead e.g. to "beam collimation" when ifc goes flat
+TODO now that spatial dispersion is defined, the IFCs can have more exotic shapes than just cone sections 
+show that nonlocal/photonic media can lead e.g. to "beam collimation" when ifc goes flat
+}
 
-the group velocity can be negative \cite{dolling2009}, but only in lossy media and under strong GVD
-show that "signal propagation velocity" is a problematic term <- \\
-as a finite-support function spans over infinite spectrum, where group velocity has to change and differ \\
--> "group velocity dispersion (GVD)" leads to signal "chirping" distortion\\
-TODO FIGURE: of this
+\mdf{
+show that near a single resonance, the phase velocity can drop \\
+TODO FIGURE?: a) eps resonant, mu constant     b) N positive, but group velocity negative\\
+the group velocity can also be negative \cite{mcdonald2000negative, dolling2006simultaneous} or superluminal, but only in lossy media and under strong GVD\\
 
-show that near a single resonance, the phase velocity can drop -> \\
-group velocity can be negative\\
+
+
+
 this happens only in presence of high absorption \cite{mikki2009electromagnetic}\\
-TODO FIGURE: a) eps resonant, mu constant     b) N positive, but group velocity dropping
+show that "signal propagation velocity" is a problematic term, because a finite-support function spans over infinite spectrum, where group velocity has to change and differ \\
 }
 %}}}
 \paragraph{Negative phase velocity of doubly-resonant media}  % TODO%{{{
@@ -469,11 +471,11 @@ TODO FIGURE: a) eps resonant, mu constant     b) N positive, but group velocity 
 
 }
 %}}}
-\paragraph{Energy and Poynting vector}  % TODO%{{{
+\paragraph{Energy and the Poynting vector}  % TODO%{{{
 \mdf{
-Poynting vector usually coincides with the group velocity\\
+Poynting vector usually coincides with the group velocity -- or always?\\
 
-phase velocity is often higher than speed of light, this is no problem\\
+phase velocity is often higher than the speed of light, this is no problem\\
 
 cite Mikki for that the Poynting vector \\
 }
@@ -731,7 +733,9 @@ ref Homogenisation issues - response to our paper from OpEx
 %			[2] D. E. Aspnes, Thin Solid Films 89, 249 (1982).
 %			[3] W. Cai and V. Shalaev, Optical Metamaterials: Fundamentals and Applications (Springer, New York, 2010).
 
-
+%% Many MMs do not bring negative refraction, other (composites) do, but not by means of resonances: 
+%% The tunable negative permittivity and negative permeability of percolative Fe/Al2O3 composites in radio frequency range with
+%% Negative index may arise from resonances
 
 % "Metamaterials do not bring new physical phenomena, they only force one to conscientiously review the common electrodynamics. There
 % are no novel phenomena, just a novel task of homogenisation and possibly enew values of constitutive parameters"
