theory of neg refraction

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1243,6 +1243,13 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1992}
 }
 
+@misc{moroz2011,
+	author = {Moroz, A},
+	title = {Drude model parameters},
+	howpublished={Online},
+	url={http://www.wave-scattering.com/drudefit.html},
+	note={last visited {M}ay 2015},}
+}
 @misc{dominec2014_meep_metamaterials,
 	author = {Dominec, Filip},
 	title = {MEEP metamaterial simulation scripts},
@@ -1260,6 +1267,7 @@ lts.fzu.cz/pdf/d-js.pdf
 	title = {Calculating size distribution of powder particles using ImageJ, \textit{http://f.dominec.eu/granulo/index.html}, last visited {A}pril 2015},
 	howpublished ={Online},
 }
+
 
 
 @article{taflove2005book,
