--- a/theory.tex
+++ b/theory.tex
@@ -442,15 +442,17 @@ So far, in the discussion of refraction both in Fig. \ref{fg_ifc} and \ref{fg_if
 
 A more complicated case occurs when the wave vector $\kk$ and group velocity $\vg$ point in opposite direction (or more generally, when they have an opposite projection on the normal to the interface).  This manifests as IFC radius \textit{decreasing} with frequency growing, as shown in  Fig. \ref{fg_ifcnr}.
 Such a case can indeed occur in natural or artificial media, as described in more detail below. 
-\begin{figure}[ht] \caption{Frequency-dependent IFCs of \textbf{(a)} an ordinary medium, \textbf{(b)} an isotropic medium with negative index of refraction and \textbf{(c)} an anisotropic medium with negative index of refraction} \label{fg_ifcnr} \centering  %% TODO  WRITE
+\begin{figure}[ht] \caption{Frequency-dependent IFCs of \textbf{(a)} an ordinary medium, \textbf{(b)} an isotropic medium with negative index of refraction and \textbf{(c)} an anisotropic medium with negative index of refraction \todo{comment}} \label{fg_ifcnr} \centering  %% TODO  WRITE
 	\includegraphics[width=.8\textwidth]{img/ifc_negrefr.pdf} 
 \end{figure}
-\begin{figure}[ht] \caption{Wavevector-dependent IFCs for one frequency, for media choice the same as in Fig. \ref{fg_ifcnr}} \label{fg_ifcnrk} \centering  %% TODO  WRITE
+\begin{figure}[ht] \caption{Wavevector-dependent IFCs for one frequency, for media choice the same as in Fig. \ref{fg_ifcnr} \todo{extend}} \label{fg_ifcnrk} \centering  %% TODO  WRITE
 	\includegraphics[width=.8\textwidth]{img/ifc_negrefrk.pdf} 
 \end{figure}
 
 In the isotropic media, or the media where the wave vector pointing parallel to the optical axis, the Snell law is still applicable, and we then speak of \textit{negative index of refraction}.  The refraction between an ordinary medium and two examples of negative-index media are plotted in Fig. \ref{fg_ifcnr}.
 It should be noted that the negative-index media are necessarily dispersive. Therefore, the refraction of temporally short pulses disperses different frequencies into different angles, as can be found from the wavevectors at different frequencies in Fig. \ref{fg_ifcnr}b,c.
+
+\todo{add that the propagation velocities are more complicated than this and will be discussed later; move a part of this text below?}
 %}}}
 
 \subsection{Nonlocal response} % TODO
